--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -29,14 +29,14 @@
                             </div>                            
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Fecha de pago <span class="campo-obligatorio">*</span></label>
-                                <input type="date" class="form-control mb-3" name="fecha_pago" id="fecha_pago" required value="{{ form_data.fecha_pago if form_data else '' }}">
+                                <input type="date" class="form-control mb-3" name="fecha_pago" id="fecha_pago" required value="{{ form_d.fecha_pago if form_data else '' }}">
                                 <div id="fecha-pago-error" class="error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <labe class="label-form">Monto <span class="campo-obligatorio">*</span></label>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text">$</span>
-                                    <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
+                                    <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_d.monto if form_data else '' }}" id="montoInput">
                                 </div>
                             </div>
                             <script>
@@ -161,7 +161,7 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <label>Fecha de pago <span class="campo-obligatorio">*</span></label>                                        
-                                                        <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}" required>
+                                                        <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ data.fecha_pago }}" required>
                                                     </div>                                             
                                             </div>
                                             <div class="row">
@@ -169,38 +169,40 @@
                                                     <label>Monto <span class="campo-obligatorio">*</span></label>
                                                     <div class="input-group">
                                                         <span class="input-group-text">$</span>
-                                                        <input type="text" class="form-control" name="monto" placeholder="0.00" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
+                                                        <input type="text" class="form-control" name="monto" placeholder="0.00" required value="{{ registro_editar.monto if registro_editar else '' }}" id="montoInput">
                                                     </div>
                                                 </div>
                                                 <script>
-                                                // Obtener el campo de entrada por su ID
-                                                var montoInput = document.getElementById('montoInput');
+                                                    document.addEventListener('DOMContentLoaded', function() {
+                                                        // Obtener el campo de entrada por su ID
+                                                        var montoInput = document.getElementById('montoInput');
                                                 
-                                                // Agregar un manejador de eventos para el evento 'input'
-                                                montoInput.addEventListener('input', function() {
-                                                    // Obtener la posición actual del cursor
-                                                    var cursorPosition = montoInput.selectionStart;
-                                                  
-                                                    // Obtener el valor actual del campo
-                                                    var valor = montoInput.value;
-                                                    
-                                                    // Quitar cualquier carácter que no sea un número o punto
-                                                    valor = valor.replace(/[^0-9.]/g, '');
-                                                    
-                                                    // Formatear el valor con dos decimales
-                                                    valor = parseFloat(valor).toFixed(2);
-                                                    
-                                                    // Agregar separadores de miles y el signo de dólar
-                                                    valor = '$' + valor.replace(/\d(?=(\d{3})+\.)/g, '$&,');
-                                                    
-                                                    // Asignar el valor formateado de nuevo al campo
-                                                    montoInput.value = valor;
-                                                    
-                                                    // Restaurar la posición del cursor después del formato
-                                                    var newPos = cursorPosition + (valor.length - montoInput.value.length);
-                                                    montoInput.setSelectionRange(newPos, newPos);
-                                                });
-                                                </script> 
+                                                        // Agregar un manejador de eventos para el evento 'input'
+                                                        montoInput.addEventListener('input', function() {
+                                                            // Obtener la posición actual del cursor
+                                                            var cursorPosition = montoInput.selectionStart;
+                                                
+                                                            // Obtener el valor actual del campo
+                                                            var valor = montoInput.value;
+                                                
+                                                            // Quitar cualquier carácter que no sea un número o punto
+                                                            valor = valor.replace(/[^0-9.]/g, '');
+                                                
+                                                            // Formatear el valor con dos decimales
+                                                            valor = parseFloat(valor).toFixed(2);
+                                                
+                                                            // Agregar separadores de miles y el signo de dólar
+                                                            valor = '$' + valor.replace(/\d(?=(\d{3})+\.)/g, '$&,');
+                                                
+                                                            // Asignar el valor formateado de nuevo al campo
+                                                            montoInput.value = valor;
+                                                
+                                                            // Restaurar la posición del cursor después del formato
+                                                            var newPos = cursorPosition + (valor.length - montoInput.value.length);
+                                                            montoInput.setSelectionRange(newPos, newPos);
+                                                        });
+                                                    });
+                                                </script>
                                                         <div class="col-md-6">
                                                             <label class="label-with-arrow">
                                                                 Medios de pago <span class="campo-obligatorio">*</span>
