--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -29,14 +29,14 @@
                             </div>                            
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Fecha de pago <span class="campo-obligatorio">*</span></label>
-                                <input type="date" class="form-control mb-3" name="fecha_pago" id="fecha_pago" required value="{{ form_d.fecha_pago if form_data else '' }}">
+                                <input type="date" class="form-control mb-3" name="fecha_pago" id="fecha_pago" required value="{{ form_data.fecha_pago if form_data else '' }}">
                                 <div id="fecha-pago-error" class="error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <labe class="label-form">Monto <span class="campo-obligatorio">*</span></label>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text">$</span>
-                                    <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_d.monto if form_data else '' }}" id="montoInput">
+                                    <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
                                 </div>
                             </div>
                             <script>
@@ -161,7 +161,7 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <label>Fecha de pago <span class="campo-obligatorio">*</span></label>                                        
-                                                        <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ data.fecha_pago }}" required>
+                                                        <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}" required>
                                                     </div>                                             
                                             </div>
                                             <div class="row">
