--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -33,11 +33,8 @@
                                 <div id="fecha-pago-error" class="error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
-                                <labe class="label-form">Monto <span class="campo-obligatorio">*</span></label>
-                                <div class="input-group mb-3">
-                                    <span class="input-group-text">$</span>
-                                    <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
-                                </div>
+                                <label class="label-form">Monto <span class="campo-obligatorio">*</span></label>
+                                <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
                             </div>
                             <script>
                                 document.addEventListener('DOMContentLoaded', function() {
@@ -91,7 +88,25 @@
                             </div>
                             <div class=" text-center">
                                 <div class="btn-container">
-                                    <button type="submit" class="btn-guardar">Guardar</button>
+                                    <button type="submit" class="btn-guardar" data-bs-toggle="modal" data-bs-target="#confirmarGuardar">Guardar</button>
+                                    <!-- Modal de confirmación para guardar un alumno -->
+                                <div class="modal fade" id="confirmarGuardar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Confirmar Guardar</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                ¿Estás seguro de guardar el registro?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn-guardar" style="background-color: #92BD89; color: #ffff;" data-bs-dismiss="modal">Cancelar</button>
+                                                <button type="submit" class="btn-guardar">Guardar</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 </div>
                             </div>
                             {% with messages = get_flashed_messages(with_categories=true) %}
@@ -133,35 +148,18 @@
                                 <i class="btn-operacion bi bi-pencil-square " id="btn-editar{{ d.id_ingresos }}" data-bs-toggle="modal" data-bs-target="#modal{{ d.id_ingresos }}" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"></i>
                             </td>
                             <td class="text-center"> 
-                                <a href="{{ url_for('eliminar_ingresos', id_ingresos=d.id_ingresos) }}" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="btn-operacion bi bi-trash"></i></a>
-                            
+                                <a href="{{ url_for('eliminar_ingresos', id_ingresos=d.id_ingresos) }}" data-bs-toggle="tooltip" 
+                                data-bs-placement="top" title="Eliminar"><i class="btn-operacion bi bi-trash"></i>
+                                </a>
+
                             </td>
                             <td class="text-center">
                                 <a href="{{ url_for('descargar_pdf', id_ingresos=d.id_ingresos) }}" data-bs-toggle="tooltip" data-bs-placement="top" title="Descargar">
                                     <i class="btn-operacion bi bi-file-earmark-pdf"></i>
                                     
                                 </a>
-                            </td>
-                            <!-- Modal de confirmación de eliminación para cada alumno -->
-                            <div class="modal fade" id="confirmarEliminar{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Confirmar eliminación</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            ¿Estás seguro de eliminar al alumno {{ d.nombre }} {{ d.apellido }}?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn-guardar" style="background-color: #92BD89; color: #ffff;" data-bs-dismiss="modal">Cancelar</button>
-                                            <a href="{{ url_for('eliminar', id=d.id) }}" class="btn-guardar">Eliminar</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            </td>           
                         </tr>
-                        <!-- MODAL -->
                         <div class="modal fade" id="modal{{ d.id_ingresos }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -187,10 +185,7 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <label>Monto <span class="campo-obligatorio">*</span></label>
-                                                    <div class="input-group">
-                                                        <span class="input-group-text">$</span>
-                                                        <input type="text" class="form-control" name="monto" placeholder="0.00" required value="{{ registro_editar.monto if registro_editar else '' }}" id="montoInput">
-                                                    </div>
+                                                    <input type="text" class="form-control" name="monto" placeholder="0.00" required value="{{ registro_editar.monto if registro_editar else '' }}" id="montoInput">
                                                 </div>
                                                 <script>
                                                     document.addEventListener('DOMContentLoaded', function() {
