--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -27,14 +27,20 @@
     </table>
 </div>
 
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" id="modal-close-button">&times;</span>
-            <table id="horarios-table">
-                <!-- Contenido de la tabla se generará dinámicamente aquí -->
-            </table>
-        </div>
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close" id="modal-close-button">&times;</span>
+        <table id="horarios-table">
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Día</th>
+                <th>Horario</th>
+                <th>Materia</th>
+            </tr>
+        </table>
     </div>
+</div>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% endblock %}
