--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -310,3 +310,42 @@ body {
 
 /*ESTILOS PARA EL MODAL DEL CALENDARIO:
 
+/* Estilos para el modal del calendario */
+.modal-calendar {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Estilos para el contenido del modal del calendario */
+.modal-content-calendar {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* Estilos para el botón de cerrar del modal del calendario */
+.close-calendar {
+  float: right;
+  cursor: pointer;
+}
+
+/* Estilos para la tabla dentro del modal del calendario */
+#horarios-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+#horarios-table th, #horarios-table td {
+  padding: 8px;
+  border: 1px solid #ddd;
+}
+
