--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -134,7 +134,7 @@
                             <th class="col-tabla" scope="col">Fecha de pago</th>
                             <th class="col-tabla" scope="col">Monto</th>
                             <th class="col-tabla" scope="col">Medio de pago</th>
-                            <th class="col-tabla" scope="col" colspan="3">Acciones</th>
+                            <th class="col-tabla" scope="col" colspan="3"></th>
                         </thead>
                     </div>
                     <tbody>
