--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -54,6 +54,9 @@
               </li>
             </ul>
             <div class="text-center ">
+              <i class="bi bi-bell"></i>
+            </div>
+            <div class="text-center ">
                 <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>  
               </div>
           </div>
